ecmascript/parser/tests/test262-error-references/fail/487674a4d34703db.js.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/test262-parser/fail/487674a4d34703db.js:1:4
  |
1 | +i = 42
  |    ^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/test262-parser/fail/487674a4d34703db.js:1:1
  |
1 | +i = 42
  | ^^

